--- a/index.html
+++ b/index.html
@@ -119,13 +119,13 @@
       <div class="further-info">
         <!-- insert images with srcsets and sizes -->
         <a href="https://www.mozilla.org/en-US/firefox/new/">
-          <img src="firefox_logo-only_RGB120.png" alt="The new firefox logo of a fox with a buring tail moving around" >
+          <img src="firefox_logo-only_RGB120.png" alt="The new firefox logo of a fox with a buring tail moving around" srcset="firefox_logo-only_RGB400.png 400w, firefox_logo-only_RGB120.png 120w" sizes="(max-width: 500px) 120px, 400px">
         </a>
         <a href="https://www.mozilla.org/">
-          <img src="mozilla-dinosaur-head120.png" alt="A red T-Rex head" srcset="mozilla-dinosaur-head400.png">
+          <img src="mozilla-dinosaur-head120.png" alt="A red T-Rex head" srcset="mozilla-dinosaur-head400.png 120w, mozilla-dinosaur-head120.png 120w" sizes="(max-width: 500px) 120px, 400px">
         </a>
         <a href="https://addons.mozilla.org/">
-          <img src="firefox-addons120.jpg" alt="A picture of a broken firefox logo" srcset="firefox-addons400.jpg">
+          <img src="firefox-addons120.jpg" alt="A picture of a broken firefox logo" srcset="firefox-addons400.jpg 400w, firefox-addons120.jpg 120w" sizes="(max-width: 500px) 120px, 400px">
         </a>
         <a href="https://developer.mozilla.org/en-US/">
           <img src="mdn.svg">
