fixing more typos

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
           <img srcset="images/firefox_logo-only_RGB120.png 120w, images/firefox_logo-only_RGB400.png 400w" 
           sizes="(max-width: 500px) 120px, 400px"
           src="images/firefox_logo-only_RGB400.png"
-          alt="The new firefox logo of a fox with a buring tail moving around">
+          alt="The new firefox logo of a fox with a buring tail moving around a planet full of water">
         </a>
         
         <a href="https://www.mozilla.org/">
