--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-us">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
@@ -101,12 +101,12 @@
       <h1>Mozilla</h1>
       <!-- insert <img> element, link to the small
           version of the Firefox logo -->
-      <img src="images/firefox_logo-only_RGB120.png">
+      <img src="images/firefox_logo-only_RGB120.png" alt="The new firefox logo of a fox with a buring tail moving around a planet full of water">
     </header>
 
     <main>
       <article>
-          <iframe width="400px" height="315px" src="https://www.youtube.com/embed/ojcNcvb1olg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe width="400" height="315" src="https://www.youtube.com/embed/ojcNcvb1olg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <!-- insert iframe from youtube -->
 
         <h2>Rocking the free web</h2>
@@ -126,12 +126,11 @@
           alt="The new firefox logo of a fox with a buring tail moving around a planet full of water">
         </a>
         <a href="https://www.mozilla.org/">
-          <img srcset="images/mozilla-dinosaur-head120.png 120w, images/mozilla-dinosaur-head400.png 400w"
-          sizes="(max-width: 500px) 120px, 400px" 
-          src="images/mozilla-dinosaur-head400.png" 
-          alt="Mozilla logo which is a red T-Rex head">
+          <img srcset="images/mozilla-dinosaur-head120.png 120w, images/mozilla-dinosaur-head400.png  400w" 
+          sizes="(max-width: 500px) 120px, 400px"
+          src="images/mozilla-dinosaur-head400.png"
+          alt="The logo of Mozilla which is a red head of a big dinosaur">
         </a>
-        
         <a href="https://addons.mozilla.org/">
           <img srcset="images/firefox-addons120.jpg 120w, images/firefox-addons400.jpg 400w" 
           sizes="(max-width: 500px) 120px, 400px" 
@@ -149,7 +148,7 @@
       <div class="red-panda">
           <picture>
               <source srcset="images/red-panda1200.jpg" media="(min-width: 600px)">
-              <img src="images/red-panda600.jpg">
+              <img src="images/red-panda600.jpg" alt="A red panda that is surrounded by plants">
           </picture>
         <!-- insert picture element -->
       </div>
